--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1 {color: #FFFFFF;text-align: center;padding-top: 200px;}
 
 
 .jeu {
-    background-image: url(mot.jpg);
+    background-image: url(image.jpg);
     width: 100%; height: 100%;
     margin-top: -22px;
 }
